New prefixed Models and Tags in RestAPI v2
